<resources>
    <string name="app_name">NewsApp-MVVM-Architecture</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="news_source">News Source</string>
    <string name="countries">Countries</string>
    <string name="languages">Languages</string>
    <string name="search">Search</string>
    <string name="news_sources">News Sources</string>
    <string name="no_results_found">No results found!</string>
</resources>